kubernetes/argocd/main-cluster/manifests/soulseek/soulseek.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soulseek
  labels:
    app: soulseek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soulseek
  template:
    metadata:
      labels:
        app: soulseek
    spec:
      containers:
        - name: soulseek
          image: slskd/slskd:0.26.0
          imagePullPolicy: Always
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
          ports:
            - name: http
              containerPort: 5030
              protocol: TCP
            - name: https
              containerPort: 5031
              protocol: TCP
            - name: soulseek
              containerPort: 50300
              protocol: TCP
          volumeMounts:
            - name: appdata
              mountPath: /app
            - name: music
              mountPath: /music
              readOnly: true
            - name: downloads
              mountPath: /downloads
        - name: vpn
          image: qmcgaw/gluetun:v3.41.3
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: soulseek-appdata
        - name: music
          nfs:
            server: ceph-nfs.home
            path: /cephfs/media/Music
        - name: downloads
          nfs:
            server: ceph-nfs.home
            path: /cephfs/media/downloads
