kubernetes/argocd/main-cluster/manifests/soulseek/soulseek.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulseek
spec:
  type: ClusterIP
  selector:
    app: soulseek
  ports:
    - name: http
      port: 5030
      targetPort: 5030
    - name: https
      port: 5031
      targetPort: 5031
    - name: soulseek
      port: 50300
      targetPort: 50300
