kubernetes/argocd/main-cluster/manifests/soulseek/soulseek.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soulseek
spec:
  ingressClassName: traefik
  rules:
  - host: soulseek.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: soulseek
            port:
              number: 5030
